force-app/main/default/objects/Recruitment_Planning_Meeting_Checklist__c/Recruitment_Planning_Meeting_Checklist__c.object-meta.xml
<CustomObject>
    <label>Recruitment Planning Meeting Checklist</label>
    <nameField>
        <displayFormat>RPM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Planning Meeting Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>