force-app/main/default/objects/Recruitment_Planning_Meeting_Checklist__c/fields/AA_Projection__c.field-meta.xml
<CustomField>
    <fullName>AA_Projection__c</fullName>
    <label>AA Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>