force-app/main/default/objects/Recruitment_Planning_Meeting_Checklist__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Recruitment Planning Meeting Checklists</relationshipLabel>
    <relationshipName>Recruitment_Planning_Meeting_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>