force-app/main/default/objects/Recruitment_Planning_Meeting_Checklist__c/fields/TaskID__c.field-meta.xml
<CustomField>
    <fullName>TaskID__c</fullName>
    <label>TaskID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>